--- a/views/lists/purchase.ejs
+++ b/views/lists/purchase.ejs
@@ -1,20 +1,24 @@
 <%- layout("/layouts/boilerplate.ejs") %>
 
-  <div class="container text-center mt-5">
-    <div class="card shadow p-5 rounded">
-      <h1 class="text-success"><i class="bi bi-check-circle-fill"></i> Order Placed!</h1>
+<div class="container text-center mt-5">
+  <div class="card shadow p-5 rounded">
+    <h1 class="text-success">
+      <i class="bi bi-check-circle-fill"></i><i class="fa-solid fa-check"></i> Order Placed!
+    </h1>
 
-      <div class="row justify-content-center mt-4">
-        <div class="col-md-6">
-          <img src="<%= product.images %>" class="img-fluid rounded mb-3" alt="<%= product.name %>" style="max-height: 100px; width:10%;">
-          <h4 class="mb-2"><%= product.name %></h4>
-          <p><%= product.description %></p>
-        </div>
-      </div>
-
-      <p class="lead mt-3">Thank you for your purchase. Your order has been successfully placed.</p>
-      <div>
-        <a href="/app" class="btn btn-primary mt-4">Continue Shopping</a>
+    <div class="row justify-content-center mt-4">
+      <div class="col-md-6">
+        <img src="<%= product.images %>" class="img-fluid rounded mb-3" alt="<%= product.name %>" style="max-height: 100px; width:10%;">
+        <h4 class="mb-2"><%= product.name %></h4>
+        <p><%= product.description %></p>
       </div>
     </div>
+
+    <p class="lead mt-3">Thank you for your purchase. Your order has been successfully placed.</p>
+    <p class="text-muted">Your order will be delivered in <strong><%= deliveryDays %> days</strong>.</p>
+
+    <div>
+      <a href="/app" class="btn btn-primary mt-4">Continue Shopping</a>
+    </div>
   </div>
+</div>
