Reinstalled dependencies and updated Node.js version to 18

--- a/views/User/signup.ejs
+++ b/views/User/signup.ejs
@@ -14,10 +14,12 @@
             <div class="invalid-feedback">Looks Good!</div>
         </div>
 
-        <input type="email" name="email" placeholder="Enter email" id="email"
-            class="form-control" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
-        <div class="invalid-feedback">
-            Please enter a valid email address.
+        <div class="mb-3">
+            <label for="username" class="form-label">Email</label>
+            <input type="email" name="email" placeholder="Enter email" id="email" class="form-control" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
+            <div class="invalid-feedback">
+                Please enter a valid email address.
+            </div>
         </div>
 
 
